<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FBE1E1"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/location"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/loc"
        android:contentDescription="@string/location"
        />

    <TextView
        android:id="@+id/road"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/location"
        android:text="@string/batala_amritsar_road"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/village"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/location"
        android:layout_below="@+id/road"
        android:text="@string/sohian_khurd_india"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            >

            <TextView
                android:id="@+id/mind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whats_on_your_mind"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#514E4E"
                android:layout_marginTop="80dp"
                android:textAlignment="center"
                android:layout_marginBottom="15dp"
                />
            <ImageView
                android:id="@+id/momos"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/momos"
                android:layout_below="@+id/mind"
                android:clickable="true"
                android:contentDescription="@string/momos"
                />
            <ImageView
                android:id="@+id/paneer"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/paneer"
                android:layout_below="@+id/mind"
                android:layout_toEndOf="@+id/momos"
                android:clickable="true"
                android:contentDescription="@string/paneer"
                />
            <ImageView
                android:id="@+id/noodles"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/noodles"
                android:layout_below="@+id/mind"
                android:layout_toEndOf="@+id/paneer"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:contentDescription="@string/noodles"
                />
            <TextView
                android:id="@+id/txtmomos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/momos"
                android:textAlignment="center"
                android:layout_below="@+id/momos"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="64dp"
                />
            <TextView
                android:id="@+id/txtpaneer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paneer"
                android:textAlignment="center"
                android:layout_below="@+id/paneer"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/txtmomos"
                android:layout_marginEnd="54dp"
                />
            <TextView
                android:id="@+id/txtnoodles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noodles"
                android:textAlignment="center"
                android:layout_below="@+id/noodles"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_toEndOf="@+id/txtpaneer"
                />

            <!-- Second -->

            <ImageView
                android:id="@+id/rolls"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/rollss"
                android:layout_below="@+id/txtmomos"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/rolls"
                />
            <ImageView
                android:id="@+id/burger"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/burger"
                android:layout_below="@+id/txtpaneer"
                android:layout_toEndOf="@+id/momos"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/burger"
                />
            <ImageView
                android:id="@+id/biryani"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/biryanii"
                android:layout_below="@+id/txtnoodles"
                android:layout_toEndOf="@+id/paneer"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/noodles"
                />
            <TextView
                android:id="@+id/txtrolls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rolls"
                android:textAlignment="center"
                android:layout_below="@+id/rolls"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="74dp"
                />
            <TextView
                android:id="@+id/txtburger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burger"
                android:textAlignment="center"
                android:layout_below="@+id/burger"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/txtrolls"
                android:layout_marginEnd="68dp"

                />
            <TextView
                android:id="@+id/txtbiryani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biryani"
                android:textAlignment="center"
                android:layout_below="@+id/biryani"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_toEndOf="@+id/txtburger"
                />

            <!-- Third -->
            <ImageView
                android:id="@+id/pizza"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/pizza"
                android:layout_below="@+id/txtrolls"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/pizza"
                />
            <ImageView
                android:id="@+id/chicken"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/chicken"
                android:layout_below="@+id/txtburger"
                android:layout_toEndOf="@+id/pizza"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/chicken"
                />
            <ImageView
                android:id="@+id/dosa"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/dosa"
                android:layout_below="@+id/txtbiryani"
                android:layout_toEndOf="@+id/chicken"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/noodles"
                />
            <TextView
                android:id="@+id/txtpizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza"
                android:textAlignment="center"
                android:layout_below="@+id/pizza"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="74dp"
                />
            <TextView
                android:id="@+id/txtchicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chicken"
                android:textAlignment="center"
                android:layout_below="@+id/chicken"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/txtpizza"
                android:layout_marginEnd="68dp"

                />
            <TextView
                android:id="@+id/txtdosa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dosa"
                android:textAlignment="center"
                android:layout_below="@+id/dosa"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_toEndOf="@+id/txtburger"
                />
            <!--Fourth-->
            <ImageView
                android:id="@+id/thali"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/thali"
                android:layout_below="@+id/txtpizza"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/thali"
                />
            <ImageView
                android:id="@+id/sandwich"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/sandwich"
                android:layout_below="@+id/txtchicken"
                android:layout_toEndOf="@+id/thali"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/sandwich"
                />
            <ImageView
                android:id="@+id/cake"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/cake"
                android:layout_below="@+id/txtdosa"
                android:layout_toEndOf="@+id/sandwich"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/cake"
                />
            <TextView
                android:id="@+id/txtthali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thali"
                android:textAlignment="center"
                android:layout_below="@+id/thali"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="80dp"
                />
            <TextView
                android:id="@+id/txtsandwich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sandwich"
                android:textAlignment="center"
                android:layout_below="@+id/sandwich"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/txtthali"
                android:layout_marginEnd="58dp"

                />
            <TextView
                android:id="@+id/txtcake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cake"
                android:textAlignment="center"
                android:layout_below="@+id/cake"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_toEndOf="@+id/txtsandwich"
                />
            <TextView
                android:id="@+id/nearest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_nearest_restaurants"
                android:textSize="22sp"
                android:layout_below="@+id/txtsandwich"
                android:textAlignment="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                />
            <!--Restaurants 1-->
            <ImageView
                android:id="@+id/res1"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_below="@+id/nearest"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/food"
                android:src="@drawable/delicious" />
            <TextView
                android:id="@+id/txtres1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abc_vaishno_bhojan_bhandar"
                android:textSize="21sp"
                android:layout_below="@+id/res1"
                android:textStyle="bold|italic"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                />

            <!--Restaurants 2-->
            <ImageView
                android:id="@+id/res2"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_below="@+id/txtres1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/food"
                android:src="@drawable/north_indian" />
            <TextView
                android:id="@+id/txtres2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mashoor_dhaba"
                android:textSize="21sp"
                android:layout_below="@+id/res2"
                android:textStyle="bold|italic"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                />
            <!--Restaurants 3-->
            <ImageView
                android:id="@+id/res3"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_below="@+id/txtres2"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/food"
                android:src="@drawable/paratha" />
            <TextView
                android:id="@+id/txtres3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goore_da_dhaba"
                android:textSize="21sp"
                android:layout_below="@+id/res3"
                android:textStyle="bold|italic"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>